deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financeira-credito
  labels:
    app: financeira-credito-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financeira-credito-app
  template:
    metadata:
      labels:
        app: financeira-credito-app
    spec:
      containers:
        - name: financeira-credito
          image: docker.pkg.github.com/augustoximenes/financeira-credito/financeira-credito:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: github-financeira-credito
