service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-camunda-bpm
  namespace: spring-boot-camunda-bpm
spec:
  selector:
    app: spring-boot-camunda-bpm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
